# photography_portfolio

./: .dockerignore  .env  .gitignore  README.md  deployment.md  docker-compose.http.yml  docker-compose.traefik.yml  docker-compose.yml  env.example
.github/workflows/: cd.yml  ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  README.md  _alembic_verify.db  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 337e37826129_initial_schema.py  8f2c1a9b3d71_site_settings_extra_columns.py
backend/app/: config.py  database.py  legacy_import.py  main.py  media_utils.py  models.py  schemas.py  seed.py  settings_serialize.py
backend/app/routers/: blog.py  collections.py  feedback.py  health.py  services.py  settings.py
backend/app/services/: email.py
backend/tests/: conftest.py  test_api.py  test_legacy_import.py  test_media_utils.py
frontend/: .gitignore  Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/scripts/: sync-assets.mjs
frontend/src/: App.jsx  App.test.jsx  index.css  main.jsx
frontend/src/api/: client.js
frontend/src/components/: Lightbox.jsx  PageHeader.jsx  PageHeader.test.jsx  PaginationBar.jsx  PaginationBar.test.jsx  SettingsLoadingView.jsx  SettingsLoadingView.test.jsx  SidebarNavItem.jsx  SidebarNavItem.test.jsx  SocialIcons.jsx
frontend/src/config/: routes.js  routes.test.js  siteDefaults.js  siteDefaults.test.js  themeImages.js
frontend/src/context/: SettingsContext.jsx
legacy_media/: README.txt
nginx/: default.conf  nginx.conf
(+15 files in other folders)
